Add documentation for Phoenicis CLI in IntelliJ IDEA (#2202)