@@ -13,6 +13,26 @@ Show Maven view: View → Tool Windows → Maven Projects
 Build phoenicis (root) → Lifecycle → package
 
 ### Run
+#### CLI
+Run → Edit Configurations
+add: CLIApplication with:
+* Name: `CLIApplication`
+* Main class: `org.phoenicis.cli.PhoenicisCLI`
+* VM options: 
+```
+--add-modules=jdk.crypto.ec,java.base,java.naming,java.sql,java.scripting,jdk.internal.vm.ci,jdk.internal.vm.compiler,org.graalvm.truffle,jdk.jsobject,jdk.xml.dom --module-path phoenicis-dist/target/lib -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI --upgrade-module-path=phoenicis-dist/target/lib/compiler.jar
+```
+* Program arguments: e.g. `-run Notepad++`
+* Working directory: `/path/to/phoenicis`
+* Environment variables: empty
+* Redirect input from: unchecked
+* Use classpath of module: `phoenicis-dist`
+* Include dependencis with "Provided" scope: unchecked
+* JRE: `Default`
+* Shorten command line: `user-local: none - java [options]`
+* Enable capturing form snapshots: unchecked
+
+#### JavaFX
 Run → Edit Configurations
 add: JavaFXApplication with:
 * Name: `JavaFXApplication`
